Implemented code to send and receive message from SQS queue

--- a/spring-boot-aws-sqs/src/main/resources/application.properties
+++ b/spring-boot-aws-sqs/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.application.name=spring-boot-aws-sqs-service
 server.port=8621
 
+#aws credentials and regions
+cloud.aws.region.static=eu-west-1
+cloud.aws.region.auto=false
+cloud.aws.credentials.accessKey=xxxxxx
+cloud.aws.credentials.secretKey=xxxxxx
 
-
+#sqs queue endpoint uri
+cloud.aws.end-point.uri:xxxxxx
